packages/svelte/tests/compiler-errors/samples/invalid-arguments-usage/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid_arguments_usage',
		message:
			'The arguments keyword cannot be used within the template or at the top level of a component'
	}
});
